--- a/Front-end/src/app/admin/admin-dashboard.component.html
+++ b/Front-end/src/app/admin/admin-dashboard.component.html
@@ -1,24 +1,17 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" style="background-color: #676767">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse flex-column align-items-center" id="navbarNav">
       <ul class="navbar-nav">
-
-        <li class="nav-item dropdown">
-          <a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">Dvd</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/admin/dvd/list">List</a></li>
-            <li><a class="dropdown-item" routerLink="/admin/dvd">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
+        <li class="nav-item "><a class="nav-link text-info" href="#">Dvd</a></li>
+        <li class="nav-item "><a class="nav-link text-info" href="#">Clients</a></li>
+        <li class="nav-item "><a class="nav-link text-info" href="#">Sales</a></li>
       </ul>
     </div>
   </div>
 </nav>
-
 <router-outlet></router-outlet>
