Feat : Adding list of Client and ionic-app

--- a/Front-end/src/app/admin/admin-dashboard.component.html
+++ b/Front-end/src/app/admin/admin-dashboard.component.html
@@ -1,17 +1,20 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #676767">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" [routerLink]="['/']" >Navbar</a>
     <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-column align-items-center" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item "><a class="nav-link text-info" href="#">Dvd</a></li>
-        <li class="nav-item "><a class="nav-link text-info" href="#">Clients</a></li>
-        <li class="nav-item "><a class="nav-link text-info" href="#">Sales</a></li>
+        <li class="nav-item "><a class="nav-link text-info" [routerLink]="['/admin/dvds']" [routerLinkActive]="['active']">Dvd</a></li>
+        <li class="nav-item "><a class="nav-link text-info" [routerLink]="['/admin/clients']" [routerLinkActive]="['active']">Clients</a></li>
+        <li class="nav-item "><a class="nav-link text-info" [routerLink]="['/admin/sales']" [routerLinkActive]="['active']">Sales</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
 <router-outlet></router-outlet>
+
+<!-- <router-outlet></router-outlet> -->
