--- a/Front-end/src/app/admin/client/client-list/admin-client-list.component.html
+++ b/Front-end/src/app/admin/client/client-list/admin-client-list.component.html
@@ -17,9 +17,9 @@
     <td> {{client.firstName}}</td>
     <td> {{client.lastName}}</td>
     <td> {{client.email}}</td>
-    <td> Movies</td>
+    <td> {{client.favoriteGenre}}</td>
     <td> {{client.registrationDate | date :'dd-MM-yyyy'}}</td>
-    <td>
+    <td (click)="openEditModal(client)">
       <button>
         <svg fill="none" height="25px" viewBox="0 0 48 48" width="25px" xmlns="http://www.w3.org/2000/svg">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -57,6 +57,6 @@
   </tbody>
 </table>
 <div class="position-relative">
-  <div class="sticky-bottom ">Add</div>
+  <div class="sticky-bottom" (click)="openCreateModal()">Add</div>
 </div>
 
