Test : Adding some test in admin/dvd/list-dvd

--- a/Front-end/src/app/admin/client/client-list/admin-client-list.component.html
+++ b/Front-end/src/app/admin/client/client-list/admin-client-list.component.html
@@ -57,6 +57,6 @@
   </tbody>
 </table>
 <div class="position-relative">
-  <div class="sticky-bottom" (click)="openCreateModal()">Add</div>
+  <div (click)="openCreateModal()" class="sticky-bottom">Add</div>
 </div>
 
