--- a/Front-end/src/app/admin/client/client-edit/admin-client-edit.component.html
+++ b/Front-end/src/app/admin/client/client-edit/admin-client-edit.component.html
@@ -1,31 +1,32 @@
 <form class="card card-body form-control">
-  <h2 class="text-center" *ngIf="client.id == 0">Add Client</h2>
-  <h2 class="text-center" *ngIf="client.id != 0">Edit Client</h2>
+  <h2 *ngIf="client.id == 0" class="text-center">Add Client</h2>
+  <h2 *ngIf="client.id != 0" class="text-center">Edit Client</h2>
 
   <div class="form-group">
     <label for="clientReference">Client Reference:</label>
-    <input class="form-control" [(ngModel)]="client.clientReference" id="clientReference" name="clientReference" required
+    <input [(ngModel)]="client.clientReference" class="form-control" id="clientReference" name="clientReference"
+           required
            type="text">
   </div>
 
   <div class="form-group">
     <label for="firstName">First Name:</label>
-    <input class="form-control" [(ngModel)]="client.firstName" id="firstName" name="firstName" required type="text">
+    <input [(ngModel)]="client.firstName" class="form-control" id="firstName" name="firstName" required type="text">
   </div>
 
   <div class="form-group">
     <label for="lastName">Last Name:</label>
-    <input class="form-control" [(ngModel)]="client.lastName" id="lastName" name="lastName" required type="text">
+    <input [(ngModel)]="client.lastName" class="form-control" id="lastName" name="lastName" required type="text">
   </div>
 
   <div class="form-group">
     <label for="email">Email:</label>
-    <input class="form-control" [(ngModel)]="client.email" id="email" name="email" required type="text">
+    <input [(ngModel)]="client.email" class="form-control" id="email" name="email" required type="text">
   </div>
 
   <div class="form-group">
     <label for="favoriteGenre">Favorite Genre:</label>
-    <select class="form-control" [(ngModel)]="client.favoriteGenre" id="favoriteGenre" name="favoriteGenre" required>
+    <select [(ngModel)]="client.favoriteGenre" class="form-control" id="favoriteGenre" name="favoriteGenre" required>
       <option value="ACTION">Action</option>
       <option value="ADVENTURE">Adventure</option>
       <option value="ANIMATION">Animation</option>
@@ -52,10 +53,11 @@
 
   <div class="form-group">
     <label for="registrationDate">Registration Date:</label>
-    <input class="form-control" [value]="client.registrationDate.toISOString().split('T')[0]" (change)="updateRegistrationDate($event)" id="registrationDate" name="registrationDate" required type="date">
+    <input (change)="updateRegistrationDate($event)" [value]="client.registrationDate.toISOString().split('T')[0]"
+           class="form-control" id="registrationDate" name="registrationDate" required type="date">
   </div>
 
 
-  <button type="submit" (click)="sendClient()">Submit</button>
+  <button (click)="sendClient()" type="submit">Submit</button>
 
 </form>
